[UPDATE] Added logrus logger for monitoring system
