# src/docs/swagger.json
@@ -622,6 +622,12 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "Note category",
+                        "name": "category_id",
+                        "in": "formData"
+                    },
+                    {
                         "enum": [
                             "draft",
                             "public",
@@ -1297,6 +1303,17 @@
         "Note": {
             "type": "object",
             "properties": {
+                "categories": {
+                    "type": "object",
+                    "properties": {
+                        "id": {
+                            "type": "string"
+                        },
+                        "name": {
+                            "type": "string"
+                        }
+                    }
+                },
                 "category_id": {
                     "type": "string"
                 },
